--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
-h1  {
-  color: red;
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:400,600,700');
+
+html, body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Titillium Web', sans-serif;
+    background-color: whitesmoke;
+}
+
+a {
+  text-decoration: none;
 }
